--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   --animate-fadeInScale: fadeInScale 1s ease forwards;
   --animate-fadeInSlight: fadeInSlight 1.5s ease forwards;
   --animate-fadeOutScale: fadeOutScale 1s ease forwards;
+  --animate-wave: wave 55s linear infinite;
 
   --font-apple: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -40,7 +41,6 @@
       opacity: 0;
       transform: scale(0.9);
     }
-    
   }
 
   @keyframes fadeInSlight {
@@ -103,10 +103,6 @@
     #000000;
 }
 
-
-
-
-
 /* Estilos generales */
 @layer base {
   * {
@@ -124,12 +120,6 @@
 .s {
   overflow: visible !important;
 }
-
-/* No elimina la barra de desplazamiento 
-html.swal2-shown,
-body.swal2-shown {
-  overflow-y: auto !important;
-} */
 
 h1,
 h2,
@@ -160,20 +150,6 @@ h4 {
   width: auto;
 }
 /* 
-.swal2-image {
-  padding: 10px 5px;
-  width: 100%;
-  height: auto;
-  max-height: 80vh;
-  object-fit: contain;
-  object-position: center;
-}
-
-.swal2-image.swal-custom-image {
-  max-width: 600px !important;
-  max-height: 80vh !important;
-  object-fit: contain;
-} */
 
 /* Solo para esta alerta de imagen */
 .swal-image-popup {
@@ -216,4 +192,16 @@ h4 {
   margin-top: 10px;
   margin-bottom: 10px;
   scrollbar-color: #8ec8da #ffffff;
+}
+
+.custom-swal-popup {
+  width: 100% !important;
+  max-width: 80% !important;
+}
+
+@media (max-width: 768px) {
+  .custom-swal-popup {
+    width: 100% !important;
+    max-width: 100% !important;
+  }
 }
