feat: Enhance CustomerTable with loading state and improve styling
- Added `isLoading` prop to CustomerTable to display loading message.
- Updated table styling for better visual consistency.
- Improved action button handling in FormButton with loading state.
- Enhanced FormContainer and Sidebar components with consistent background colors.
- Removed unused Icon and Icons components, refactored imports.
- Introduced Particles component for background effects with mouse interaction.
- Updated SidebarItem for better responsiveness and styling.
- Refined validation messages in validateFields utility for clarity.
- Added SidebarLogo component for improved logo handling in the sidebar.

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@
   --secondary-color-dark: #222222;
   --color-text-dark: #fff0f0;
 
+  --color-logo-light: #000000;
+  --color-logo-dark: red;
+
   --animate-fadeInScale: fadeInScale 1s ease forwards;
   --animate-fadeInSlight: fadeInSlight 1.5s ease forwards;
   --animate-fadeOutScale: fadeOutScale 1s ease forwards;
